[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/IceCreamMachine.png" type="Texture" id=1]
[ext_resource path="res://scripts/BlockHandler.gd" type="Script" id=2]
[ext_resource path="res://LinkText.tres" type="DynamicFont" id=3]
[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/MachineMenu.gd" type="Script" id=5]
[ext_resource path="res://sprites/IceCreamConeDefault.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 10
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="IceCreamMachine" type="RigidBody2D"]
z_index = 1
mode = 1
mass = 0.0530612
gravity_scale = 0.0
continuous_cd = 1
linear_damp = 4.0
angular_damp = 4.0
script = ExtResource( 2 )
useable = true
ice_cream_machine = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 3 )

[node name="MachineMenu" type="Control" parent="."]
visible = false
margin_left = -67.0
margin_top = -45.0
margin_right = 21.0
margin_bottom = 13.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="MachineMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.2, 0.2, 0.839216 )

[node name="Label" type="Label" parent="MachineMenu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 330.0
margin_bottom = 31.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = ExtResource( 3 )
text = "flavor                cone"

[node name="Cone" type="Sprite" parent="MachineMenu"]
position = Vector2( 76, 47.3333 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Chocolate" type="Button" parent="MachineMenu"]
margin_left = 1.0
margin_top = 9.0
margin_right = 67.0
margin_bottom = 29.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "chocolate"

[node name="Vanilla" type="Button" parent="MachineMenu"]
margin_left = 1.0
margin_top = 17.0
margin_right = 157.0
margin_bottom = 53.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Vanilla"

[node name="Strawberry" type="Button" parent="MachineMenu"]
margin_left = 1.0
margin_top = 25.0
margin_right = 157.0
margin_bottom = 61.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Strawberry"

[node name="Mint Chocolate Chip" type="Button" parent="MachineMenu"]
margin_left = 1.0
margin_top = 33.0
margin_right = 157.0
margin_bottom = 69.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Mint Chocolate Chip"

[node name="Cookies N\' Cream" type="Button" parent="MachineMenu"]
margin_left = 1.0
margin_top = 41.0
margin_right = 157.0
margin_bottom = 77.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Cookies N' Cream"

[node name="Default" type="Button" parent="MachineMenu"]
margin_left = 36.0
margin_top = 9.0
margin_right = 192.0
margin_bottom = 45.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Default"

[node name="Square" type="Button" parent="MachineMenu"]
margin_left = 36.0
margin_top = 17.0
margin_right = 192.0
margin_bottom = 53.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Square"

[node name="Remove" type="Button" parent="MachineMenu"]
margin_left = 64.0
margin_top = 52.0
margin_right = 220.0
margin_bottom = 88.0
rect_scale = Vector2( 0.15, 0.15 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "remove 1"

[node name="Spawn" type="Button" parent="MachineMenu"]
margin_left = 40.0
margin_top = 52.0
margin_right = 196.0
margin_bottom = 88.0
rect_scale = Vector2( 0.15, 0.15 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "spawn"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
[connection signal="button_up" from="MachineMenu/Chocolate" to="MachineMenu" method="_on_Chocolate_button_up"]
[connection signal="button_up" from="MachineMenu/Vanilla" to="MachineMenu" method="_on_Vanilla_button_up"]
[connection signal="button_up" from="MachineMenu/Strawberry" to="MachineMenu" method="_on_Strawberry_button_up"]
[connection signal="button_up" from="MachineMenu/Mint Chocolate Chip" to="MachineMenu" method="_on_Mint_Chocolate_Chip_button_up"]
[connection signal="button_up" from="MachineMenu/Cookies N' Cream" to="MachineMenu" method="_on_Cookies_N_Cream_button_up"]
[connection signal="button_up" from="MachineMenu/Default" to="MachineMenu" method="_on_Default_button_up"]
[connection signal="button_up" from="MachineMenu/Square" to="MachineMenu" method="_on_Square_button_up"]
[connection signal="button_up" from="MachineMenu/Remove" to="MachineMenu" method="_on_Remove_button_up"]
[connection signal="button_up" from="MachineMenu/Spawn" to="." method="_on_Spawn_button_up"]
